# pebble-timer-plus

./: .clang-format  .gitattributes  .gitignore  CMakeLists.txt  LICENSE.md  README.md  appinfo.json  package-lock.json  package.json  wscript
assets/: Aplite Banner.xcf  App Store Icon.xcf  Basalt Banner.xcf  Chalk Banner.xcf  Concept 1.xcf  aplite-banner.xcf  app-store-icon.xcf  basalt-banner.xcf  chalk-banner.xcf  icon~bw.xcf
assets/banners/: banner.xcf
assets/icons/: icon_color.xcf  store_icon.xcf
src/: animation.c  animation.h  drawing.c  drawing.h  interpolation.c  main.c  main.h  text_render.c  text_render.h  timer.c  timer.h  utility.c  utility.h
src/c/: animation.c  animation.h  drawing.c  interpolation.c  interpolation.h  main.c  text_render.c  text_render.h  timer.c  timer.h  utility.c  utility.h
src/pkjs/: index.js
